# Market-Anomaly-Narrative-Engine

./: .env.example  .gitignore  HOW_TO_VIEW_NEWS.md  NEWS_QUERIES.md  README.md  WEB_APP_SUMMARY.md  create_test_anomaly.py  debug_detection.py  docker-compose.yml  main.py  pyproject.toml  query_news.py  test_detection_debug.py
.claude/skills/fix/: SKILL.md
.github/workflows/: .gitkeep
config/: settings.py  thresholds.yaml
datasets/news/: BTC-USD_sample.json  README.md
docs/: API.md  API_REFERENCE.md  DATABASE.md  DEVELOPMENT.md  IMPLEMENTATION_STATUS.md  TESTING.md  WEB.md
examples/: test_agent_tools.py  test_data_ingestion.py  test_llm_client.py  test_news_aggregation.py
src/cli/: __init__.py  utils.py
src/database/: connection.py  models.py
src/llm/: __init__.py  client.py  models.py
src/orchestration/: __init__.py  pipeline.py  scheduler.py
src/phase1_detector/anomaly_detection/: asset_profiles.py  models.py  statistical.py
src/phase1_detector/clustering/: __init__.py  clustering.py
src/phase1_detector/data_ingestion/: __init__.py  binance_client.py  coinbase_client.py  crypto_client.py  models.py
src/phase1_detector/news_aggregation/: __init__.py  aggregator.py  cryptopanic_client.py  grok_client.py  (+7 more)
src/phase2_journalist/: __init__.py  agent.py
src/phase3_skeptic/: __init__.py  validator.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
web/: IMPLEMENTATION_STATUS.md  PHASE4_TESTING.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE_9_SUMMARY.md  QUICKSTART.md  README.md  VERIFICATION_CHECKLIST.md
web/backend/: .env.example  check-db.js  jest.config.js  package-lock.json  package.json  test-phase5.sh  tsconfig.json
web/frontend/: .env.example  .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/shared/: index.ts  package-lock.json  package.json  tsconfig.json
(+127 files in other folders)
